# ImageGenerator

./: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  README.md  generators.cpp  generators.h  main.cpp  main.h  makefile
Fun/: BinFun.cpp  BinFun.h  BinaryFunction.cpp  BinaryFunction.h  ConstFun.h  ConstFunction.h  Function.cpp  Function.h  FunctionGenerator.cpp  FunctionParts.h  UnaryFunction.cpp  UnaryFunction.h
RELEASE/: ImageGenerator  ImageGenerator.cfg
